syntax = "proto3";
package nymo;

option go_package = "github.com/nymo-net/nymo/pb";

message PeerHandshake {
  uint32 version = 1;
  uint32 cohort = 2;
  uint64 pow = 3;
  repeated bytes peerTokens = 4;
}

message HandshakeOK {
  uint32 cohort = 1;
  repeated bytes peerTokens = 2;
}

message MsgDigest {
  uint32 cohort = 1;
  bytes hash = 2;
}

message MsgList {
  repeated MsgDigest messages = 1;
}

message RequestMsg {
  bytes hash = 1;
}

message RequestPeer {
  bytes token = 1;
  uint64 pow = 2;
  uint32 cohort = 3;
}

message ResponsePeer {
  bytes token = 1;
  bytes encAddress = 2;
}

message RealMessage {
  string message = 1;
  bytes senderID = 2; // sender's public key
}

message EncryptedMessage {
  bytes msg = 1;
  bytes signature = 2; // signed with sender's private key
}

message Message {
  uint32 targetCohort = 1;
  int64 generated = 2;
  bytes ephemeralPub = 3; // ephemeral public key
  bytes encMessage = 4; // shared-key encrypted EncryptedMessage
}

message MessageContainer {
  bytes msg = 1;
  bytes msgHash = 2;
  uint64 pow = 3;
}